Update toolbar tip

--- a/LassoTool.roboFontExt/info.plist
+++ b/LassoTool.roboFontExt/info.plist
@@ -21,8 +21,8 @@
 	<key>requiresVersionMinor</key>
 	<string>4b</string>
 	<key>timeStamp</key>
-	<real>1693265827.7129102</real>
+	<real>1696384411.295188</real>
 	<key>version</key>
-	<string>2.0</string>
+	<string>2.1</string>
 </dict>
 </plist>
