--- a/.github/workflows/pr_to_tag.yml
+++ b/.github/workflows/pr_to_tag.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Create tag if not present
       uses: rickstaa/action-create-tag@v1
       id: "tag_create"
+      continue-on-error: true
       with:
         tag: ${{ ENV.VERSION }}
-        tag_exists_error: false
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        force_push_tag: true
