--- a/.github/workflows/pr_to_tag.yml
+++ b/.github/workflows/pr_to_tag.yml
@@ -13,15 +13,16 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set ENV values from YAML
-      uses: dcarbone/yaml-to-env-action@v1.0.0
+      uses: pietrobolcato/action-read-yaml@1.0.0
+      id: info
       with:
-        yaml-file: info.yaml
+          config: ${{ github.workspace }}/info.yaml
 
     - name: Create tag if not present
       continue-on-error: true
       run : |
         echo The PR was merged hope this works
-        git tag ${{ ENV.VERSION }}
+        git tag ${{ steps.info.outputs['version'] }}
         git push --follow-tags
         
     #  uses: rickstaa/action-create-tag@v1
