--- a/.github/workflows/pr_to_tag.yml
+++ b/.github/workflows/pr_to_tag.yml
@@ -14,17 +14,17 @@ jobs:
 
     - name: Read yaml
       uses: teunmooij/yaml@v1
-      id: info
+      id: info-action
       with:
           from-file: info.yaml
 
-    - name: Test yaml
+    - name: Content yaml
       run : |
-        echo ${{ steps.info.outputs.version }}
+        echo ${{ steps.info-action.outputs.data }}
 
     - name: Create tag if not present
       uses: rickstaa/action-create-tag@v1
       continue-on-error: true
       with:
-        tag: "${{ steps.info.outputs.version }}"
+        tag: ${{ steps.info-action.outputs.data["version"] }}
         force_push_tag: true
