--- a/.github/workflows/pr_to_tag.yml
+++ b/.github/workflows/pr_to_tag.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Content yaml
       run : |
         echo ${{ steps.info-action.outputs.data }}
+        echo ${{ steps.info-action.outputs.data.version }}
 
     - name: Create tag if not present
       uses: rickstaa/action-create-tag@v1
