--- a/.github/workflows/pr_to_tag.yml
+++ b/.github/workflows/pr_to_tag.yml
@@ -21,11 +21,11 @@ jobs:
     - name: Content yaml
       run : |
         echo ${{ steps.info-action.outputs.data }}
-        echo ${{ steps.info-action.outputs.data.version }}
+        echo ${{ steps.info-action.outputs.data['version'] }}
 
     - name: Create tag if not present
       uses: rickstaa/action-create-tag@v1
       continue-on-error: true
       with:
-        tag: ${{ steps.info-action.outputs.data.version }}
+        tag: ${{ steps.info-action.outputs.data['version'] }}
         force_push_tag: true
